Cleanup and update Copyright 2024